fix(matches component): Component overflow
- Make the container with the matches not overflow out overflow out of
the page when running a tournament with a high number of players (10).

--- a/src/Components/Matches/Matches.module.css
+++ b/src/Components/Matches/Matches.module.css
@@ -4,7 +4,6 @@
   align-items: center;
 
   width: 100%;
-  height: 100%;
 }
 
 .matches__header,
@@ -26,7 +25,7 @@
   justify-items: center;
   grid-gap: 15px;
   width: 100%;
-  max-width: 450px;
+  max-width: 600px;
   margin-bottom: 4%;
 }
 
@@ -54,7 +53,7 @@
 
 .matches__grid {
   width: 80%;
-  max-width: 450px;
+  max-width: 600px;
   padding: 10px 0;
   margin-bottom: 15px;
 
