--- a/src/Pages/TournamentDetails/TournamentDetails.module.css
+++ b/src/Pages/TournamentDetails/TournamentDetails.module.css
@@ -4,10 +4,11 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
+  height: 100%;
 }
 
 .tournamentDetails {
-  width: 100%;
+  overflow-y: scroll;
 
   background: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url("../../assets/chess-board-top-view-compressed.jpg") no-repeat 40% /
@@ -26,9 +27,6 @@
 
   font-size: 15px;
   cursor: pointer;
-}
-
-.tournamentDetails__views__navButtons__matches {
 }
 
 .tournamentDetails__views__navButtons__activeView {
